--- a/src/modules/common/components/Modal/style.module.scss
+++ b/src/modules/common/components/Modal/style.module.scss
@@ -74,7 +74,7 @@
         .footer {
             border-top: 1px solid #00274E33;
             width: 50%;
-            padding: 15px 25px 65px;
+            padding: 15px 25px 80px;
             display: flex;
             align-items: center;
             justify-content: space-between;
@@ -120,11 +120,20 @@
     }
 
     .modal__box--confirmation {
-        width: 90%;
+        width: 100%;
         max-width: 420px;
         background-color: #fff;
         border-radius: 5px;
         padding: 24px;
+
+        .footer {
+            border-top: 1px solid #00274E33;
+            width: 100%;
+            padding: 15px 0px 5px;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
 
         .header {
             width: 100%;
@@ -168,7 +177,7 @@
         display: flex;
 
         &>img {
-            max-width: 100px;
+            max-width: 150px;
             margin-right: 50px;
             margin-bottom: 30px;
         }
@@ -214,7 +223,7 @@
     display: flex;
 
     &>img {
-        max-width: 100px;
+        max-width: 200px;
         margin-right: 90px;
         margin-bottom: 30px;
     }
